# BLOUedit

./: .gitignore  INSTALL.md  README.md  blouedit  blouedit-fixed.c  blouedit.c  com.blouedit.BLOUedit.yml  fix-blouedit.sh  fix-permissions-thorough.sh  fix-permissions.sh  generate-icon.sh  hello.yml  meson.build  postinstall-hook.sh  계획.md
build-aux/meson/: postinstall.py
data/: com.blouedit.BLOUedit.appdata.xml.in  com.blouedit.BLOUedit.desktop.in  com.blouedit.BLOUedit.gschema.xml  meson.build
repo/: summary  summary.idx
repo/refs/heads/app/com.blouedit.BLOUedit/x86_64/: master
repo/refs/heads/runtime/com.blouedit.BLOUedit.Debug/x86_64/: master
repo/refs/heads/runtime/com.blouedit.BLOUedit.Locale/x86_64/: master
repo/summaries/: 27b091c23a5b140df9154858f2468e06fd82295693a6f4c26799e392377f4a13-4f0a7b9a5021cf2ddbd497c8862f6d023bef5f6bb7b4e0cd7178a5f593259a45.delta  3bed502c085ad38b7251dd635bc68b66150790918f4c71dd95c8d228b016bcc8-4f0a7b9a5021cf2ddbd497c8862f6d023bef5f6bb7b4e0cd7178a5f593259a45.delta  4260f5a389de1270284324871ad334d87c6e97f21967f3c559e1d6dba46899f9-4f0a7b9a5021cf2ddbd497c8862f6d023bef5f6bb7b4e0cd7178a5f593259a45.delta  47c9bd03297aa80774f77a61853bf191468e88432063199d1a9193aae077a105-4f0a7b9a5021cf2ddbd497c8862f6d023bef5f6bb7b4e0cd7178a5f593259a45.delta  617112befb895c1b81a163a18cae79155bc8e9b225cc3bbff3b5beae486764ed-4f0a7b9a5021cf2ddbd497c8862f6d023bef5f6bb7b4e0cd7178a5f593259a45.delta  7c1cc5a422a9fb527c9b6989886233ca82fbbdda8ebec9564c4c70e39cbb33b2-4f0a7b9a5021cf2ddbd497c8862f6d023bef5f6bb7b4e0cd7178a5f593259a45.delta  7f9f1b96a503caea99b2f95928d9377119f2ebdeee3e17dcb26a67493effcc2b-4f0a7b9a5021cf2ddbd497c8862f6d023bef5f6bb7b4e0cd7178a5f593259a45.delta  9a6b0d89299255e3015c8c0c0b13d46ddfe24537fe85451361e3ce495e56d2be-263f4c0b425aaeada217483558c78bbe722107ffb3b15ebd76b6f646cfb3d4cc.delta  bdda585c26f7782262b7338e41d13231ff6e6c5f302a6139663ecf363181cf1e-4f0a7b9a5021cf2ddbd497c8862f6d023bef5f6bb7b4e0cd7178a5f593259a45.delta  c2b5e7a23750eca852d827d12320d3ee06d10dd989ce628099e6450be92b7709-4f0a7b9a5021cf2ddbd497c8862f6d023bef5f6bb7b4e0cd7178a5f593259a45.delta  cf8ce9c59c5964c0af545258638d0f7be9da0ab13ea4072b89831acb47c62b0d-4f0a7b9a5021cf2ddbd497c8862f6d023bef5f6bb7b4e0cd7178a5f593259a45.delta  d0bd49cd7cb847e4e920af84495b38c00c783737c5b465c389f5af5f2f193761-263f4c0b425aaeada217483558c78bbe722107ffb3b15ebd76b6f646cfb3d4cc.delta  dd654b69f6775fc4dd2f0018308577ddff30b7220dfb336738c617889aa007e4-263f4c0b425aaeada217483558c78bbe722107ffb3b15ebd76b6f646cfb3d4cc.delta
resources/: blouedit.gresource.xml  meson.build
resources/css/: style.css
resources/ui/: window.ui
src/: application.cpp  application.h  main.cpp  meson.build  window.cpp  window.h
src/accessibility/: accessibility.c  accessibility.h  accessibility_dialog.c  timeline_accessibility.c
src/ai/: audio_noise_remover.cpp  audio_noise_remover.h  audio_stretch.cpp  audio_stretch.h  audio_to_video.cpp  audio_to_video.h  auto_subtitle.cpp  auto_subtitle.h  enhancement.cpp  enhancement.h  face_mosaic.cpp  face_mosaic.h  image_generator.cpp  image_generator.h  music_generator.cpp  music_generator.h  scene_detection.cpp  scene_detection.h  smart_cutout.cpp  smart_cutout.h  speech_to_text.cpp  speech_to_text.h  style_transfer.cpp  style_transfer.h  text_editor.cpp  text_editor.h  text_to_speech.cpp  text_to_speech.h  text_to_video.cpp  text_to_video.h  thumbnail_generator.cpp  thumbnail_generator.h  voice_cloning.cpp  voice_cloning.h  voice_modulator.cpp  voice_modulator.h
src/ai/python/: auto_subtitle_module.py  bridge.py  enhancement.py  enhancement_module.py  face_mosaic_module.py  image_generator_module.py  music_generator_module.py  scene_detection.py  smart_cutout_module.py  stt_module.py  style_transfer.py  style_transfer_module.py  tts_module.py
src/editor/: crop.cpp  crop.h  filters.cpp  filters.h  flip.cpp  flip.h  resize.cpp  resize.h  rotate.cpp  rotate.h  stickers.cpp  stickers.h  transitions.cpp  transitions.h
src/timeline/: CMakeLists.txt  clip_alignment.cpp  clip_drawer.c  clip_drawer.h  edge_trimming.c  edge_trimming.h  edit_mode_shortcuts.c  edit_mode_shortcuts.h  media_type_visualizer.c  media_type_visualizer.h  multicam_editor.c  multicam_editor.h  slip_slide_edits.c  timeline.cpp  timeline.h  timeline_all.h  timeline_key_handler.c  timeline_key_handler.h  timeline_minimap.c  timeline_minimap.h  timeline_scale.c  timeline_scale.h  unlimited_tracks.c  unlimited_tracks.h
src/timeline/core/: timeline.cpp  timeline.h  types.h
src/timeline/groups/: groups.h
src/timeline/history/: auto_save.c  changes_visualization.c  timeline_history.c  timeline_history.h  timeline_snapshot.c
src/timeline/keyframes/: keyframe_curve_editor.c  keyframe_templates.c  keyframe_templates.h  keyframes.h
src/timeline/markers/: marker_color.c  marker_color.h  marker_editor.c  marker_editor.h  marker_memo.c  marker_memo.h  marker_search.c  marker_search.h  markers.h
src/timeline/performance/: auto_proxy.c  hw_acceleration.c  performance_mode.c  prerender.c  rendering_cache.c  timeline_performance.h
src/timeline/tracks/: track_auto_organize.c  track_presets.c  track_tags.c  track_tags.h  tracks.cpp  tracks.h
src/timeline/ui/: media_type_visualizer.c  media_type_visualizer.h  timeline_hand_tool.c  timeline_hand_tool.h  timeline_interaction.c  timeline_interaction.h  timeline_scale.c  timeline_scale.h  timeline_view_mode.c  timeline_view_mode.h
src/ui/: accessibility-settings.ui
src/ui/preview/: preview.c  preview.h  scopes.c  scopes.h
src/ui/themes/: black-on-yellow.css  high-contrast-dark.css  high-contrast-light.css  theme_manager.c  theme_manager.h  yellow-on-black.css
temp_build/: blouedit.c
